<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.nasrf.eyecare.SigningUp.CompleteRegActivity">

<LinearLayout
    android:layout_marginTop="45dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_first_name"
            android:hint="@string/first_name"
            android:textAlignment="center"
            style="@style/EditText_style"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/et_last_name"
            android:hint="@string/last_name"
            style="@style/EditText_style"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/et_phone"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:textAlignment="center"
            style="@style/EditText_style"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/EditText_style"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_password"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            style="@style/EditText_style"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textAlignment="center"
            android:id="@+id/et_renter_pass"
            android:hint="@string/renter_pass"
            android:inputType="textPassword"
            style="@style/EditText_style"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="btnDoneReg"
            style="@style/Button_style"
            android:text="@string/done"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>

</LinearLayout>
