<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="16dp"
    tools:context="com.example.nasrf.eyecare.SigningUp.SignupActivity">

    <ImageView
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/app_logo" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:gravity="center"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:id="@+id/language_spinner"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>

                <Button
                    android:layout_weight="1"
                    style="@style/Button_style"
                    android:id="@+id/btnDoneLanguage"
                    android:text="@string/done"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="12dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>



        <Spinner
            android:textAlignment="center"
            android:id="@+id/country_spinner"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_marginTop="12dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/governorate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:textAlignment="center"
            android:id="@+id/gov_spinner"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_marginTop="12dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:textAlignment="center"
            android:id="@+id/city_spinner"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <Button
        android:onClick="RegCompleted"
        style="@style/Button_style"
        android:id="@+id/btnCont"
        android:text="@string/cont"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
