<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nasrf.eyecare.ColorBlindTest.ColorTestActivity">


    <TextView
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="25sp"
        android:textStyle="bold"
        style="@style/Base_TextView_style"
        android:text="@string/write_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_number"
        android:src="@drawable/i0"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="220dp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_current_num"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:hint="@string/num"
                style="@style/EditText_style"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="65dp"
                android:layout_height="65dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    style="@style/Base_TextView_style"
                    android:id="@+id/tv_explain"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:onClick="Validate"
            style="@style/Button_style"
            android:text="@string/validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_continue"
            android:enabled="false"
            android:onClick="Continue"
            android:text="@string/cont"
            style="@style/Button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
